# Expressive_Robot_Control

./: .gitignore
.github/workflows/: homework3-ros2-ci.yml
Homework-1/: analysis_v1.py  requirements2.txt
Homework-2/: README_EN.md  README_JA.md  requirements.txt
Homework-2/docs/: README_EN.md  README_JA.md  make_figures.py
Homework-2/outputs/: results.json
Homework-2/src/: blackbox_prep.py  data_loader.py  expert_features.py  main.py  make_figures.py  make_video.py
Homework-2/src/methods/: __init__.py  ae_logreg.py  expert_logreg.py  expert_rf.py  pca_knn.py  raw_mlp.py
Homework-3/: .dockerignore  Makefile  README_EN.md  README_JA.md  UPSTREAM_DOBOT_6AXIS_ROS2_V4.md  compose.yaml
Homework-3/docker/: Dockerfile  entrypoint.sh
Homework-3/ros2_ws/src/DOBOT_6Axis_ROS2_V4/cra_description/urdf/: me6_robot.xacro
Homework-3/ros2_ws/src/DOBOT_6Axis_ROS2_V4/dobot_rviz/rviz/: urdf.rviz
Homework-3/ros2_ws/src/dobot_me6_bringup/: CMakeLists.txt  package.xml
Homework-3/ros2_ws/src/dobot_me6_bringup/config/: ros2_controllers.yaml
Homework-3/ros2_ws/src/dobot_me6_bringup/launch/: display.launch.py  fake_control.launch.py  gazebo.launch.py
Homework-3/ros2_ws/src/dobot_me6_bringup/worlds/: empty.world
Homework-3/ros2_ws/src/dobot_me6_description/: CMakeLists.txt  package.xml
Homework-3/ros2_ws/src/dobot_me6_description/rviz/: dobot_me6.rviz
Homework-3/ros2_ws/src/dobot_me6_description/urdf/: dobot_me6.urdf.xacro
Homework-3/ros2_ws/src/dobot_me6_driver/: package.xml  setup.cfg  setup.py
Homework-3/ros2_ws/src/dobot_me6_driver/dobot_me6_driver/: dobot_dashboard_client.py  hardware_setup.py  me6_trajectory_bridge.py  safety_check.py
Homework-3/ros2_ws/src/dobot_me6_driver/launch/: real_validation.launch.py
Homework-3/ros2_ws/src/dobot_me6_examples/: package.xml  setup.cfg  setup.py
Homework-3/ros2_ws/src/dobot_me6_examples/dobot_me6_examples/: ee_circle.py  ee_control_common.py  ee_figure8.py  ee_kanji_bara.py  ee_kanji_bi.py  ee_kanji_biang.py  ee_kanji_biang_biang_men.py  ee_kanji_men.py  ee_kanji_shou.py  ee_keyboard.py  ee_line.py  ee_marker.py  ee_mocap_mimic.py  ee_stroke_common.py  send_joint_goal.py
