<?xml version="1.0"?>
<package format="3">
  <name>dobot_me6_bringup</name>
  <version>0.1.0</version>
  <description>Launch and controller configuration for the DOBOT ME6 ROS 2 environment.</description>
  <maintainer email="student@example.com">Homework-3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dobot_me6_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
