<?xml version="1.0"?>
<package format="3">
  <name>dobot_me6_description</name>
  <version>0.1.0</version>
  <description>Approximate DOBOT ME6 robot description for ROS 2 homework simulation.</description>
  <maintainer email="student@example.com">Homework-3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
