<?xml version="1.0"?>
<package format="3">
  <name>dobot_me6_driver</name>
  <version>0.1.0</version>
  <description>Guarded TCP bridge utilities for DOBOT ME6 hardware validation.</description>
  <maintainer email="student@example.com">Homework-3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>cra_description</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
