<?xml version="1.0"?>
<package format="3">
  <name>dobot_me6_examples</name>
  <version>0.1.0</version>
  <description>Example ROS 2 clients for DOBOT ME6 homework validation.</description>
  <maintainer email="student@example.com">Homework-3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
